--- a/Styles/Header.css
+++ b/Styles/Header.css
@@ -6,7 +6,7 @@
   top: 0px;
   right: 0px;
   left: 0px;
-  height: 90px;
+  height: 130px;
   z-index: 100;
   transition: transform .4s;
   border-bottom: 2px solid rgb(229, 229, 229);
@@ -18,6 +18,7 @@
   position: absolute;
   left: 8px;
   cursor: pointer;
+  top: 8px;
 }
 
 .hamburger-icon {
